# NN-MP

./: CMakeLists.txt  CMakePreBuild.sh  main.py  notes.md
ROS/: CMakeLists.txt  package.xml
ROS/src/: imageConverter.cpp  imageConverter.h  node_actor.cpp  node_img_feat.cpp  node_state_feat.cpp
config/: config-state-depth.yaml  config_main.json
distribution/: betaDistribution.py
environment/: Car.py  Env.py  obstacle.py  point.py
feature_extractor/: stateDepth.py  stateOnly.py
networks/: CNN.cpp  CNN.h  FCN.cpp  FCN.h  imageConverter_test.cpp  imageConverter_test.h  randInt8Calibrator.cpp  tensorNet.cpp  tensorNet.h  test.cpp
networks/models/: CNN.onnx.sha256sum  FCN.onnx  FCN.onnx.1.1.8201.GPU.FP32.engine  FCN.onnx.sha256sum  actor.onnx  actor.onnx.1.1.8201.GPU.FP32.engine  actor.onnx.sha256sum
policy/: pi.py
ros_ws/.catkin_tools/profiles/default/: devel_collisions.txt
ros_ws/src/ROS/: CMakeLists.txt
ros_ws/src/ROS/src/: imageConverter.cpp  imageConverter.h  node_actor.cpp  node_img_feat.cpp  node_state_feat.cpp
utils/: model_convert.py
